unpackaged/main/default/objects/OpportunityLineItem/fields/AcctSeed__Project__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>