unpackaged/main/default/objects/OpportunityLineItem/fields/AcctSeed__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calculated based on Total Price x Tax Group's Combined Tax Rate on Opportunity Product Line, unless using AvaTax.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>