unpackaged/main/default/objects/OpportunityLineItem/fields/BricebookID__c.field-meta.xml
<CustomField>
    <fullName>BricebookID__c</fullName>
    <formula>PricebookEntryId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BricebookID</label>
    <type>Text</type>
</CustomField>