unpackaged/main/default/objects/OpportunityLineItem/fields/GA_Billing_Group__c.field-meta.xml
<CustomField>
    <fullName>GA_Billing_Group__c</fullName>
    <label>GA Billing Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>