unpackaged/main/default/objects/OpportunityLineItem/fields/MS_OP_Installation_Total__c.field-meta.xml
<CustomField>
    <fullName>MS_OP_Installation_Total__c</fullName>
    <formula>Installation__c  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>