unpackaged/main/default/objects/OpportunityLineItem/fields/MS_OP_Lease_MSRP_Value__c.field-meta.xml
<CustomField>
    <fullName>MS_OP_Lease_MSRP_Value__c</fullName>
    <label>MS OP Lease MSRP Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>