unpackaged/main/default/objects/OpportunityLineItem/fields/OP_Line_Item_Notes__c.field-meta.xml
<CustomField>
    <fullName>OP_Line_Item_Notes__c</fullName>
    <label>OP Line Item Notes</label>
    <length>500</length>
    <type>Html</type>
</CustomField>