unpackaged/main/default/objects/OpportunityLineItem/fields/OP_Notes__c.field-meta.xml
<CustomField>
    <fullName>OP_Notes__c</fullName>
    <label>Quotation Line Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>