unpackaged/main/default/objects/OpportunityLineItem/fields/OP_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>OP_Product_Family__c</fullName>
    <label>OP Product Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>