unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Report__c.field-meta.xml
<CustomField>
    <fullName>Product_Report__c</fullName>
    <formula>OpportunityId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Report</label>
    <type>Text</type>
</CustomField>